server/forms/sentence-plan/components/goal-summary-card/_goal-summary-card.scss
.goal-summary-card {
  // Ensure long goal titles wrap within the card
  .govuk-summary-card__title {
    overflow-wrap: break-word;
    word-break: break-word;
  }

  // Prevent links from turning purple when visited
  a:visited {
    color: govuk-functional-colour(link);
  }

  // Prevent button-as-link from turning blue when visited
  a.govuk-button:visited {
    color: govuk-colour('white');

    &.govuk-button--secondary {
      color: govuk-colour('black');
    }
  }

  // Add spacing between areas of need and move buttons, reduce space below
  &__areas-of-need + .govuk-button-group {
    margin-top: govuk-spacing(4);
    margin-bottom: 0;
  }

  &__state-tag {
    margin-bottom: govuk-spacing(2);
  }

  &__info {
    display: flex;
    justify-content: space-between;
  }

  &__steps {
    table-layout: fixed;
    margin-bottom: govuk-spacing(2);

    td {
      word-wrap: break-word;
    }

    th {
      &:nth-child(1) {
        width: 20%;
      }

      &:nth-child(2) {
        width: 60%;
      }

      &:nth-child(3) {
        width: 20%;
      }
    }

    &--empty,
    &--empty-no-shadow {
      @include govuk-font($size: 19, $weight: 'normal');
      display: flex;
      justify-content: space-between;
      margin-bottom: govuk-spacing(2);
      padding-bottom: govuk-spacing(2);
    }

    &--empty {
      box-shadow: inset 0 -1px govuk-functional-colour(border);
    }
  }

  &__areas-of-need {
    margin-bottom: 0;
    @include govuk-font($size: 16, $weight: 'normal');
    color: govuk-functional-colour(secondary-text);

    &:not(:last-child) {
      padding-bottom: govuk-spacing(2);
      box-shadow: inset 0 -1px govuk-functional-colour(border);
    }

    &--agreed {
      padding-top: govuk-spacing(4);
    }
  }

  &--error {
    padding-left: govuk-spacing(3);
    border-left: $govuk-border-width-form-group-error solid govuk-functional-colour(error);
  }

  .govuk-details {
    margin-bottom: 0;
  }

  .step-counter {
    margin-bottom: govuk-spacing(2);
  }

  // Print styles: auto-expand details element to show steps
  @media print {
    // Prevent the goal card from being split across pages
    break-inside: avoid;

    .govuk-details {
      // Hide the "View steps" summary text when printing
      > .govuk-details__summary {
        display: none !important;
      }

      // Force the details content to be visible when printing
      // ::details-content targets the browser's internal content wrapper
      &::details-content {
        content-visibility: visible;
        height: auto !important;
      }
    }
  }
}

